# invariant

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TESTING.md  biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-manual.yml  release.yml
docs/: audit.md  financial-audit.md  implementation-summary.md  mvp-completion.md  phase-5-implementation.md  project.md  quick-start.md  release-notes.md  release-troubleshooting.md  roadmap.md  technical-audit.md  troubleshooting.md
migrations/: 001_core_ledger.ts  002_contacts_ar_ap.ts  003_inventory_payroll_tax.ts  004_integrity_triggers.ts  005_allocation_constraints.ts  006_tax_code_integration.ts  007_system_accounts_config.ts  008_fiscal_periods.ts  009_bank_reconciliation.ts  010_vendor_bills.ts  011_multi_currency.ts  012_closed_period_enforcement.ts  013_invoice_line_tax_inclusive.ts  013_system_account_fixes.ts  014_invoice_line_tax_inclusive.ts  014_invoice_total_triggers.ts  015_bank_import.ts  015_invoice_total_triggers.ts  016_bank_import.ts  016_document_attachments.ts  017_document_attachments.ts  017_update_channel.ts  018_additional_system_accounts.ts  018_credit_notes.ts  019_budgeting.ts  index.ts
scripts/: build-release.sh  test-stats.mjs  test-stats.sh
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  updater.rs
src/tests/: setup.ts
(+108 files in other folders)
