[package]
name = "invariant"
version = "0.4.1"
description = "Professional offline-first accounting software for small businesses"
authors = ["yorphos"]
license = "UNLICENSED"
repository = "https://github.com/yorphos/invariant"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2.9.0"
thiserror = "2.0.18"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }

